# ib-practica12-oop-gtests-exercism-SMarGa

complejos/: CMakeLists.txt
complejos/src/: complejos.cc  complejos.h  complejos_main.cc
complejos/test/: test_complejos.cc
dates/: CMakeLists.txt
dates/src/: dates  dates.cc  dates.h  dates_main.cc  pruebas.txt  resultado.txt
dates/test/: gtest_main.cc  test_date.cc
